<resources>
    <string name="app_name">PokeApi</string>
    <string name="preferences_settings">Settings</string>
    <!-- Error -->
    <string name="error_default">Oops! An unexpected error occurred.</string>
    <string name="error_network">Oops! There is no Internet connection.</string>
    <string name="error_server">Oops! The connection to the server has been lost.</string>
    <string name="error_retry">Retry</string>
    <!-- Splash -->
    <string name="splash_icon_copyright">Icons made by <a href="https://www.flaticon.es/autores/those-icons" title="Those Icons">Those Icons</a> from <a href="https://www.flaticon.es/" title="Flaticon"> www.flaticon.es</a></string>
    <!-- Home -->
    <string name="home_pokedex">Pokédex</string>
    <string name="home_settings">Settings</string>
    <!--Pokédex -->
    <string name="pokedex_icon_copyright">Icons made by <a href="https://www.flaticon.com/authors/roundicons-freebies" title="Roundicons Freebies">Roundicons Freebies</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></string>
    <string name="pokedex_icon_copyright2"><div>Icons made by <a href="https://www.flaticon.com/authors/vitaly-gorbachev" title="Vitaly Gorbachev">Vitaly Gorbachev</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></string>
    <string name="pokedex_number">#%s</string>
    <!-- Pokémon -->
    <string name="pokemon_about">About</string>
    <string name="pokemon_genus_label">Genus</string>
    <string name="pokemon_egg_groups_label">Egg groups</string>
    <string name="pokemon_shape_label">Shape</string>
    <string name="pokemon_height_label">Height</string>
    <string name="pokemon_height_value">%.1f m</string>
    <string name="pokemon_weight_label">Weight</string>
    <string name="pokemon_weight_value">%.1f kg</string>
    <string name="pokemon_abilities_label">Abilities</string>
    <string name="pokemon_abilities_hidden_value">%s (hidden)</string>
    <string name="pokemon_stats">Base stats</string>
    <string name="pokemon_stat_hp">HP</string>
    <string name="pokemon_stat_attack">Attack</string>
    <string name="pokemon_stat_defense">Defense</string>
    <string name="pokemon_stat_sp_attack">Sp. atk</string>
    <string name="pokemon_stat_sp_defense">Sp. def</string>
    <string name="pokemon_stat_speed">Speed</string>
    <string name="pokemon_evolution">Evolution</string>
    <string name="pokemon_moves">Moves</string>
    <!-- Settings -->
    <string name="settings_theme_title">Tema</string>
    <string-array name="settings_theme_entries">
        <item>@string/settings_theme_label_light</item>
        <item>@string/settings_theme_label_dark</item>
        <item>@string/settings_theme_label_system</item>
    </string-array>
    <string-array name="settings_theme_values">
        <item>@string/settings_theme_value_light</item>
        <item>@string/settings_theme_value_dark</item>
        <item>@string/settings_theme_value_system</item>
    </string-array>
    <string name="settings_theme_label_light">Modo claro</string>
    <string name="settings_theme_value_light" translatable="false">1</string>
    <string name="settings_theme_label_dark">Modo oscuro</string>
    <string name="settings_theme_value_dark" translatable="false">2</string>
    <string name="settings_theme_label_system">Sistema</string>
    <string name="settings_theme_value_system" translatable="false">-1</string>
</resources>
